# datadog-lambda-python

./: .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE-3rdparty.csv  NOTICE  README.md  __azurite_db_blob__.json  __azurite_db_blob_extent__.json  ave_time.sh  debug_encoding.py  dependency.lock.amd64.3.7  dependency.lock.amd64.3.8  dependency.lock.arm64.3.9  pub_layer.sh  publish_test_layer.sh  pyproject.toml  repro.sh  requirements-dev.txt  requirements.txt  setup.py  testit.sh
.circleci/: config.yml
.git-hooks/: detect-api-keys.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report_template.md  feature_request_template.md  issue_template.md
.github/workflows/: build.yml  build_layer.yml  check-size.yml  check_dependencies.yml  codeql-analysis.yml  integration_test.yml  lint.yml  system_tests.yml  test.yml  update-snapshots.yml  update_deps.yml
ci/: build-pipeline.yaml  get_dd_api_key.sh  get_secrets.sh  poll_e2e.sh  publish_layers.sh  publish_pypi.sh
ci/datasources/: environments.yaml  regions.yaml  runtimes.yaml
ci/input_files/: build.yaml.tpl
datadog_lambda/: __init__.py  api.py  asm.py  aws.py  cold_start.py  cold_start_tracing.py  config.py  constants.py  datadog_lambda  dogstatsd.py  dsm.py  durable.py  extension.py  fips.py  handler.py  logger.py  metric.py  module.py  module_name.py  patch.py  span_pointers.py  stats_writer.py  statsd_writer.py  tag_object.py  tags.py  thread_stats_writer.py  trace_intake.py  trace_wrapper.py  tracing.py  trigger.py  version.py  wrapper.py  xray.py
datadog_lambda/pb/: span.proto  span_pb2.py  trace.proto  trace_payload.proto  trace_payload_pb2.py  trace_pb2.py
env/: pyvenv.cfg
pygments-2.19.2.dist-info/: RECORD
pytest-8.4.2.dist-info/: RECORD
pytest_cov-7.0.0.dist-info/: RECORD
scripts/: _spec_ddtrace_dep.sh  add_new_region.sh  all_layers.sh  build_layers.sh  check_dependencies.sh  check_format.sh  check_layer_size.sh  create_documentation_pr.sh  generate_grpc.sh  list_layers.sh  publish_govcloud.sh  publish_layers.sh  publish_prod.sh  publish_sandbox.sh  publish_staging.sh  pypi.sh  repro.sh  run_integration_tests.sh  run_tests.sh  send_status_metric.sh  setup_python_env.sh  sign_layers.sh
tests/: Dockerfile  conftest.py  test_api.py  test_asm.py  test_benchmarks.py  test_cold_start.py  test_config.py  test_dogstatsd.py  test_dsm.py  test_durable.py  test_extension.py  test_handler.py  test_logger.py  test_metric.py  test_module_name.py  test_patch.py  test_span_pointers.py  test_tag_object.py  test_tags.py  test_trace_intake.py  test_tracing.py  test_trigger.py  test_version.py  test_wrapper.py  test_xray.py  utils.py
tests/event_samples/: api-gateway-no-apiid.json  api-gateway-non-proxy-async.json  api-gateway-non-proxy.json  api-gateway-websocket-connect.json  api-gateway-websocket-default.json  api-gateway-websocket-disconnect.json  api-gateway.json  application-load-balancer-multivalue-headers.json  application-load-balancer-mutivalue-headers.json  appsync-bad.json  authorizer-request-api-gateway-v1-cached.json  authorizer-request-api-gateway-v1.json  authorizer-request-api-gateway-v2-cached.json  authorizer-request-api-gateway-v2.json  authorizer-request-api-gateway-websocket-connect.json  authorizer-request-api-gateway-websocket-main.json  authorizer-request-api-gateway-websocket-message.json  authorizer-token-api-gateway-v1-cached.json  authorizer-token-api-gateway-v1.json  eventbridge-custom.json  eventbridge-sqs.json  function-url.json  http-api.json  kinesis-batch.json  kinesis.json  lambda-url-w3c.json  lambda-url.json  rum-appsync-no-headers.json  rum-appsync-request-not-dict.json  rum-appsync.json  sns-b64-msg-attribute.json  sns-batch.json  sns-sqs-java-upstream.json  sns-string-msg-attribute.json  sqs-b64-msg-attribute.json  sqs-batch.json  sqs-java-upstream.json  sqs-string-msg-attribute.json  states.json  stepfunctions.json
tests/integration/: compare_to_snapshots.py  decorator.py  handle.py  handler.py  http_error.py  http_requests.py  package-lock.json  package.json  parse-json.js  requirements.txt  serverless-plugin.yml  serverless.yml
tests/integration/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
tests/integration/input_events/: api-gateway-get.json  appsync.json  eventbridge-custom.json  http-api.json  sqs.json  websocket.json
tests/integration/snapshots/: async-metrics-python27.logs  async-metrics-python27.snapshot  async-metrics-python36.logs  async-metrics-python36.snapshot  async-metrics-python37.logs  async-metrics-python37.snapshot  async-metrics-python38.logs  async-metrics-python38.snapshot  async-metrics_python27.logs  async-metrics_python36.logs  async-metrics_python37.logs  async-metrics_python38.logs  http-requests-python27.logs  http-requests-python36.logs  http-requests-python37.logs  http-requests-python38.logs  http-requests_python27.logs  http-requests_python36.logs  http-requests_python37.logs  http-requests_python38.logs  sync-metrics-python27.logs  sync-metrics-python36.logs  sync-metrics-python37.logs  sync-metrics-python38.logs  sync-metrics_python27.logs  sync-metrics_python36.logs  sync-metrics_python37.logs  sync-metrics_python38.logs
tests/integration/snapshots/return_values/: async-metrics_python27_api-gateway-get.json  async-metrics_python27_sns.json  async-metrics_python37_api-gateway-get.json  async-metrics_python37_sns.json  async-metrics_python37_websocket.json  sync-metrics_s3.json  (+29 more)
