[tool.poetry]
name = "datadog_lambda"
version = "8.121.0.dev0"
description = "The Datadog AWS Lambda Library"
authors = ["Datadog, Inc. <dev@datadoghq.com>"]

[project]
name = "datadog_lambda"
version = "8.121.0.dev0"
description = "The Datadog AWS Lambda Library"
authors = [{ name = "Datadog, Inc.", email = "dev@datadoghq.com" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8.0,<4"
repository = "https://github.com/DataDog/datadog-lambda-python"
keywords = [
    "datadog",
    "aws",
    "lambda",
    "layer",
]
dependencies = [
    "datadog>=0.51.0,<1.0.0",
    "wrapt>=1.11.2,<2",
    "ddtrace>=3.19.1,<4; python_version>='3.9.0' and python_version < '3.10'",
    "ddtrace>=4.1.1,<5; python_version>='3.10.0'",
    "ujson>=5.9.0",
]
packages = [
    { include = "datadog_lambda" }
]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = ">=3.8.0,<4"
datadog = ">=0.51.0,<1.0.0"
wrapt = "^1.11.2"
ddtrace = ">=3.19.1,<4"
ujson = ">=5.9.0"
botocore = { version = "^1.34.0", optional = true }
requests = { version ="^2.22.0", optional = true }
pytest = { version= "^8.0.0", optional = true }
pytest-benchmark = { version = "^4.0", optional = true }
flake8 = { version = "^5.0.4", optional = true }

[tool.poetry.extras]
dev = [
    "botocore",
    "flake8",
    "pytest",
    "pytest-benchmark",
    "requests",
]

[project.optional-dependencies]
dev = [
    "botocore>=1.34.0,<2",
    "requests>=2.22.0,<3",
    "pytest>=8.0.0,<9",
    "pytest-benchmark>=4.0,<5",
    "flake8>=5.0.4,<6",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--benchmark-disable --benchmark-autosave"
